--- a/Raymond ADFS Multifaktor Authenticator/Raymond ADFS Multifaktor Authenticator.csproj
+++ b/Raymond ADFS Multifaktor Authenticator/Raymond ADFS Multifaktor Authenticator.csproj
@@ -53,9 +53,25 @@
     <Compile Include="AuthenticationAdapter.cs" />
     <Compile Include="AuthenticationAdapterMetadata.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <None Include="RaymondMFAAdapter.snk" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Read me.txt" />
+    <None Include="Resources\AuthenticationForm_1044.txt" />
+    <None Include="Resources\AuthenticationForm_1033.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
