--- a/Raymond ADFS Multifaktor Authenticator/Raymond ADFS Multifaktor Authenticator.csproj
+++ b/Raymond ADFS Multifaktor Authenticator/Raymond ADFS Multifaktor Authenticator.csproj
@@ -58,6 +58,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="TOTPAuthenticator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="RaymondMFAAdapter.snk" />
